--- a/package.json
+++ b/package.json
@@ -30,19 +30,18 @@
     "node >= 0.2.6"
   ],
   "dependencies": {
-    "ltl": "latest",
-    "marked": "0.3.2",
-    "jquery": "2.1.1",
-    "codemirror": "4.1.0",
-    "lighter": "latest",
+    "beams": "0.0.16",
+    "codemirror": "4.2.0",
     "coffee-script": "1.7.1",
-    "jymin": "latest",
-    "mysql": "^2.3.0"
+    "jquery": "2.1.1",
+    "lighter": "latest",
+    "marked": "0.3.2",
+    "mysql": "2.3.2"
   },
   "devDependencies": {
     "zeriousify": "latest",
-    "mocha": "1.18.2",
-    "istanbul": "0.2.10",
+    "mocha": "1.20.1",
+    "istanbul": "0.2.11",
     "assert-plus": "0.1.5",
     "coveralls": "2.10.0"
   },
