--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .DS_Store
 .idea
 .project
+.cache
+.debug
 *.seed
 *.log
 *.csv
@@ -8,15 +10,11 @@
 *.out
 *.pid
 *.gz
-
 pids
 logs
 results
-
 npm-debug.log
 coverage
 node_modules
-
-.cache
-
 build
+overrides.json
