Adding Ormy and Plans pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,38 @@
   "name": "lighter.io",
   "version": "0.0.1",
   "description": "Website for the Lighter framework and associated modules.",
+  "dependencies": {
+    "codemirror": "^4.4.0",
+    "coffee-script": "1.7.1",
+    "highlight.js": "8.2.0",
+    "jquery": "2.1.1",
+    "lighter": "^0.1.71",
+    "ltl": "^0.1.15",
+    "marked": "^0.3.2",
+    "sly": "^0.0.1"
+  },
+  "devDependencies": {
+    "aloha": "^0.0.0",
+    "beams": "^0.0.16",
+    "cedar": "^0.0.19",
+    "chug": "^0.2.0",
+    "coveralls": "^2.11.1",
+    "d6": "^0.1.7",
+    "docent": "^0.0.1",
+    "exam": "^0.0.7",
+    "istanbul": "0.3.0",
+    "jymin": "^0.3.5",
+    "ormy": "^0.2.1",
+    "plans": "^0.0.2",
+    "requiry": "^0.0.1",
+    "ringer": "^0.0.0",
+    "seattle": "^0.0.4",
+    "shellify": "^0.0.4",
+    "splode": "^0.0.2",
+    "thrust": "^0.0.0",
+    "za": "^0.0.21",
+    "zeriousify": "^0.1.10"
+  },
   "keywords": [
     "lighter.io"
   ],
@@ -22,37 +54,5 @@
   "contributors": [
     "Sam Eubank <sameubank@gmail.com>"
   ],
-  "license": "MIT",
-  "dependencies": {
-    "codemirror": "^4.4.0",
-    "coffee-script": "1.7.1",
-    "highlight.js": "8.2.0",
-    "jquery": "2.1.1",
-    "lighter": "^0.1.63",
-    "ltl": "^0.1.14",
-    "marked": "^0.3.2",
-    "sly": "^0.0.1"
-  },
-  "devDependencies": {
-    "aloha": "^0.0.0",
-    "beams": "^0.0.16",
-    "cedar": "^0.0.17",
-    "chug": "^0.2.0",
-    "coveralls": "^2.11.1",
-    "d6": "^0.1.6",
-    "docent": "^0.0.0",
-    "exam": "^0.0.7",
-    "istanbul": "0.3.0",
-    "jymin": "^0.3.5",
-    "ormy": "^0.1.4",
-    "plans": "^0.0.1",
-    "requiry": "^0.0.1",
-    "ringer": "^0.0.0",
-    "seattle": "^0.0.4",
-    "shellify": "^0.0.4",
-    "splode": "^0.0.2",
-    "thrust": "^0.0.0",
-    "za": "^0.0.21",
-    "zeriousify": "^0.1.9"
-  }
+  "license": "MIT"
 }
