--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,15 @@
-.DS_Store
-.idea
-.project
+.*
+config
+controllers
+coverage
+log
+models
+public
+scripts
+styles
+test
+views
+
 *.seed
 *.log
 *.csv
@@ -8,17 +17,14 @@
 *.out
 *.pid
 *.gz
-
+.idea
+.project
+.DS_Store
+.cache
 pids
 logs
 results
-
-npm-debug.log
-coverage
 node_modules
-test
-.cache
-
 build
 .travis.yml
 .npmignore
