--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
   "name": "lighter.io",
   "version": "0.0.1",
-  "description": "Website for the Lighter framework and associated modules.",
+  "description": "lighter.io is a Zerious module",
   "dependencies": {
     "codemirror": "^4.4.0",
     "coffee-script": "1.7.1",
     "highlight.js": "8.2.0",
     "jquery": "2.1.1",
-    "lighter": "^0.1.71",
+    "lighter": "^0.3.0",
     "ltl": "^0.1.15",
     "marked": "^0.3.2",
-    "sly": "^0.0.1"
+    "sly": "^0.0.1",
+    "webpack": "^1.5.3"
   },
   "devDependencies": {
     "aloha": "^0.0.0",
-    "beams": "^0.0.16",
-    "cedar": "^0.0.19",
-    "chug": "^0.2.0",
+    "beams": "^0.1.0",
+    "cedar": "^0.2.0",
+    "chug": "^0.3.0",
     "coveralls": "^2.11.1",
-    "d6": "^0.1.7",
+    "d6": "^0.2.0",
     "docent": "^0.0.1",
-    "exam": "^0.0.8",
+    "exam": "^0.2.1",
     "istanbul": "0.3.0",
-    "jymin": "^0.3.5",
-    "ormy": "^0.2.2",
-    "plans": "^0.0.2",
+    "jymin": "^0.4.0",
+    "ormy": "^0.3.0",
+    "plans": "^1.0.0",
     "requiry": "^0.0.1",
-    "ringer": "^0.0.0",
+    "ringer": "^0.0.1",
     "seattle": "^0.0.4",
-    "shellify": "^0.0.4",
-    "splode": "^0.0.2",
+    "shellify": "^0.0.5",
+    "splode": "^0.1.0",
     "thrust": "^0.0.0",
-    "za": "^0.0.21",
-    "zeriousify": "^0.1.10"
+    "za": "^0.2.0",
+    "zeriousify": "^0.1.12"
   },
   "keywords": [
     "lighter.io"
@@ -49,7 +50,7 @@
   },
   "repository": "https://github.com/lighterio/lighter.io.git",
   "bugs": "https://github.com/lighterio/lighter.io/issues",
-  "homepage": "https://github.com/lighterio/lighter.io",
+  "homepage": "http://lighter.io",
   "author": "Sam Eubank <sameubank@gmail.com>",
   "contributors": [
     "Sam Eubank <sameubank@gmail.com>"
