--- a/.npmignore
+++ b/.npmignore
@@ -9,7 +9,6 @@ scripts
 styles
 test
 views
-
 *.seed
 *.log
 *.csv
@@ -28,3 +27,5 @@ node_modules
 build
 .travis.yml
 .npmignore
+.editorconfig
+.jshintrc
