--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "cedar": "^0.2.0",
     "chug": "^0.3.0",
     "coveralls": "^2.11.1",
-    "d6": "^0.2.0",
     "docent": "^0.0.1",
+    "porta": "^0.0.0",
     "exam": "^0.2.1",
     "istanbul": "0.3.0",
     "jymin": "^0.4.0",
     "ormy": "^0.3.0",
     "plans": "^1.0.0",
     "requiry": "^0.0.1",
-    "ringer": "^0.0.1",
+    "omen": "^0.0.1",
     "seattle": "^0.0.4",
     "shellify": "^0.0.5",
     "splode": "^0.1.0",
